--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     transition: all 200ms linear;
 }
 .folded #adminmenu, .folded #adminmenu .wp-submenu, .folded #adminmenuback, .folded #adminmenuwrap {
-    transition: all 100ms 200ms linear; 
+    transition: all 100ms 0ms linear; 
 }
 .folded #adminmenu .wp-submenu {transition: all 0ms 0ms linear !important; display: none;}
 #adminmenu .wp-submenu {transition: all 0ms 0ms linear !important;}
@@ -22,6 +22,7 @@
     transform: translateX(-15px);
     width: 30px;
 }
+.wp-full-overlay.expanded {margin-left: 0px !important;}
 .wp-full-overlay.expanded a.collapse-sidebar {
     background: none repeat scroll 0 0 rgba(255, 255, 255, 0) !important;
     width: 0px;
