--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 #adminmenu li.menu-top:hover, #adminmenu li.opensub > a.menu-top, #adminmenu li > a.menu-top:focus {background: rgba(0,0,0,0.25);}
 #adminmenu .wp-submenu {background: rgba(0,0,0,0.75);}
 #adminmenu, #adminmenu .wp-submenu, #adminmenuback, #adminmenuwrap {
-    transition: width 200ms linear;
+    /*transition: width 200ms linear;*/
     z-index: 10000 !important;
     overflow-x: visible;
 }
@@ -14,7 +14,7 @@ ul#adminmenu {background: transparent;}
 #wpcontent, #wpfooter { margin-left: 36px !important; }
 .folded #wpcontent, .folded #wpfooter { margin-left: auto; }
 .folded #adminmenu, .folded #adminmenu .wp-submenu, .folded #adminmenuback, .folded #adminmenuwrap {
-    transition: width 100ms 0ms linear; 
+    /*transition: width 100ms 0ms linear; */
     overflow: hidden;
     z-index: 10000 !important;
     height: auto;
@@ -28,7 +28,7 @@ ul#adminmenu {background: transparent;}
 }
 #adminmenu .wp-menu-name {
     opacity: 1;
-    transition: all 200ms 200ms linear;
+    /*transition: all 200ms 200ms linear;*/
 }
 .wp-full-overlay a.collapse-sidebar {
     background: none repeat scroll 0 0 rgba(255, 255, 255, 0.85) !important;
@@ -41,6 +41,19 @@ ul#adminmenu {background: transparent;}
 .wp-full-overlay.expanded a.collapse-sidebar {
     background: none repeat scroll 0 0 rgba(255, 255, 255, 0) !important;
     width: 0px;
+}
+
+#adminmenu .wp-has-current-submenu .wp-submenu, #adminmenu .wp-has-current-submenu .wp-submenu.sub-open {
+    display: none;
+}
+#adminmenu .wp-has-current-submenu:hover .wp-submenu, #adminmenu .wp-has-current-submenu:hover .wp-submenu.sub-open {
+    background: rgba(0,0,0,0.8);
+    display: inline-block !important;
+    float: right !important;
+    left: 160px;
+    margin-bottom: -100%;
+    position: absolute !important;
+    top: 0;
 }
 
 .wp-full-overlay .collapse-sidebar-arrow:before, .collapse-sidebar-label {display: none;}
