Updated for WP 4.3
git-svn-id: https://plugins.svn.wordpress.org/auto-collapse/trunk@1217322 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ ul#adminmenu {background: transparent;}
     left: 0;
     height: 100%;
     width: 25px;
+    position: fixed;
+    margin-left: 0;
 }
 .wp-core-ui .wp-full-overlay.collapsed .collapse-sidebar span {display: none !important; visibility: hidden;}
 .wp-full-overlay.expanded {margin-left: 0px !important;}
