--- a/style.css
+++ b/style.css
@@ -62,3 +62,7 @@ ul#adminmenu {background: transparent;}
 }
 
 .wp-full-overlay .collapse-sidebar-arrow:before, .collapse-sidebar-label {display: none;}
+
+@media screen and (max-width: 782px) {
+    #wpcontent {margin-left: 0 !important;}
+}
