Updated Submenu Handling
git-svn-id: https://plugins.svn.wordpress.org/auto-collapse/trunk@1296327 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@ ul#adminmenu {background: transparent;}
 }
 
 .wp-full-overlay .collapse-sidebar-arrow:before, .collapse-sidebar-label {display: none;}
+.wp-full-overlay *, .wp-full-overlay .collapse-sidebar, .wp-full-overlay-main, .wp-full-overlay-sidebar,
+#customize-info, #customize-theme-controls>ul>.accordion-section {
+    transition: all 0ms linear !important;
+    -moz-transition: all 0ms linear !important;
+    -webkit-transition: all 0ms linear !important;
+}
 
 @media screen and (max-width: 782px) {
     #wpcontent {margin-left: 0 !important;}
